/*
 * Copyright 2026 Fedor Malyshev
 *
 * Licensed under the Apache License, Version 2.0 (the "License") ;
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'com.gradleup.nmcp' version '1.0.2'
}

def getVersionFromGit() {
    try {
        def gitTag = providers.exec {
            commandLine 'git', 'describe', '--tags', '--abbrev=0'
        }.standardOutput.asText.get().trim()

        return gitTag.replaceFirst('^v', '')
    } catch (Exception e) {
        e.printStackTrace()
        // Fallback default version if Git is missing or has no tags
        return '1.0.0'
    }
}

group = 'org.jquic'
version = getVersionFromGit()

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withJavadocJar()
    withSourcesJar()
}

dependencies {
    compileOnlyApi 'org.jspecify:jspecify:1.0.0'
    // Conscrypt for TLS 1.3 and modern crypto
    implementation 'org.jctools:jctools-core:4.0.5'
    implementation 'commons-codec:commons-codec:1.22.0'

    // Slf4j API and Logback implementation
    implementation 'org.slf4j:slf4j-api:2.0.9'

        // Testing dependencies
    // JUnit 6 BOM handles all version management for JUnit libraries automatically
    testImplementation platform('org.junit:junit-bom:6.1.2')

    // JUnit dependencies (versions omitted because they are managed by the BOM)
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    // Latest Mockito core with full Java 25 byte-code compatibility
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.23.0'

    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom {
                name = 'jquic'
                description = 'Java implementation of QUIC protocol'
                url = 'https://github.com/jquic/jquic'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = 'Fedoresko'
                        name = 'Fedor Malyshev'
                        email = 'fmmalyshev@gmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/jquic/jquic.git'
                    developerConnection = 'scm:git:ssh://github.com/jquic/jquic.git'
                    url = 'https://github.com/jquic/jquic'
                }
            }
        }
    }
}

nmcp {
    publishAllPublicationsToCentralPortal {
        username = providers.environmentVariable("OSSRH_USERNAME").getOrNull()
        password = providers.environmentVariable("OSSRH_PASSWORD").getOrNull()
        publishingType = "AUTOMATIC"
    }
}

signing {
    def signingKey = System.getenv("GPG_PRIVATE_KEY")
    def signingPassword = System.getenv("GPG_PASSPHRASE")
    if (signingKey && signingPassword) {
        useInMemoryPgpKeys(signingKey, signingPassword)
        sign publishing.publications.mavenJava
    } else {
        tasks.withType(Sign).configureEach { enabled = false }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["-h", file("src/main/c").absolutePath]
//    options.compilerArgs += ["--release", "22"]
}